# s3pypi

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
s3pypi/: __main__.py  locking.py
terraform/: main.tf
terraform/modules/s3pypi/: main.tf
