[tool.poetry]
name = "s3pypi"
version = "2.0.1"
description = "CLI for creating a Python Package Repository in an S3 bucket"
authors = [
    "Matteo De Wint <matteo@gorilla.co>",
    "Ruben Van den Bossche <ruben@gorilla.co>",
]

[tool.poetry.scripts]
s3pypi = "s3pypi.__main__:main"

[tool.poetry.dependencies]
boto3 = "^1.38.11"
boto3-stubs = {extras = ["dynamodb", "s3"], version = "^1.34.11"}
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
bump2version = "^1.0.1"
flake8 = ">=7.0"
isort = "^5.13.2"
moto = ">=5.0"
mypy = ">=1.10"
pyinstrument = "^4.6.1"
pytest = ">=8.0"
pytest-cov = ">=5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
